# agentarium

./: DAY5_COMPLETION.md  DEPLOYMENT.md  README.md  TODO.md  django_auth.md  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/rules/: project.mdc
.github/workflows/: claude-code-review.yml  claude.yml
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/.cursor/rules/: backend.mdc
backend/apps/agents/: ai.py  models.py  serializers.py  urls.py  views.py
backend/apps/agents/migrations/: 0001_initial.py
backend/apps/api/: urls.py
backend/apps/core/: apps.py  exceptions.py  logging.py  middleware.py  permissions.py  signal_events.py  signals.py  sse.py  throttles.py
backend/apps/core/management/commands/: seed.py
backend/apps/core/serializers/: fields.py
backend/apps/tasks/: admin.py  apps.py  cache.py  filters.py  models.py  serializers.py  sse.py  tasks.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_agenttask_updated_at.py
backend/apps/users/: selectors.py  serializers.py  services.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  db.sqlite3  settings.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/seed_data/: agents.json  users.json
backend/tests/: conftest.py  test_agents_api.py  test_api_endpoints.py  test_auth.py  test_cache.py  test_models.py  test_openai_mock.py  test_permissions.py  test_serializers.py  test_tasks_api.py
backend/utils/: openai_client.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.cursor/: frontend.mdc
frontend/src/: App.tsx  main.tsx  (+2 more)
plans/: auth_implementation.md  day1.md  day2.md  day3.md  day4.md  day5.md  main.md
(+31 files in other folders)
